2008-04-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Proper quoting when cloning text widget data. We
	must use [list]/[lappend] to serialize the data else rogue braces
	can break the de-serialization.

2008-04-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:       Applied patch #1935658 from Sergei Gavrikov to
	* tkchat_clock.tcl: restrict the selected font to displayed text.

2008-04-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix configure options when not using ttk in the
	options dialog and added a 'i hate lolcatz' option.

2008-03-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkchat::getColor): If someone selects our
	background colour to post with then we will invert them.

2008-03-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Permit configuration of the auto-inactive status
	message via the preferences page.

2008-02-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Make the history timestamp recognition more fault
	tolerant and read the ISO8601 format 
	* tkchat.tcl: Added catch block around the main callback handlers
	to try to avoid breaking the xml parser if there is an error in
	the handler.

2008-02-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Addded an option to leave the enter/exit messages
	plain. Option is on the options dialog page.

2008-02-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Avoid applying bad colours from the rc file too.

2008-01-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added checking of colour info before recording it
	for a user and validate colors read from the network.

2008-01-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Changed tkchat home url's to tkchat.tcl.tk
	Fixed some dodgy jid processing when changing nicks.
	* tkchat.tcl: Alerts to be tied to the alerting window.
	Added some caps as extras to the presence stanzas.
